@@ -4,6 +4,5 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/unboundid-ldapsdk-se.jar"/>
-	<classpathentry kind="lib" path="libs/trace.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
