@@ -16,8 +16,6 @@
 
 package de.danielweisser.android.ldapsync.syncadapter;
 
-import com.nullwire.trace.ExceptionHandler;
-
 import android.app.Service;
 import android.content.Intent;
 import android.os.IBinder;
@@ -39,7 +37,6 @@ public class SyncService extends Service {
 	public void onCreate() {
 		Log.v(TAG, "onCreate");
 		synchronized (sSyncAdapterLock) {
-			ExceptionHandler.register(this, "http://www.danielweisser.de/android/server.php");
 			if (sSyncAdapter == null) {
 				sSyncAdapter = new SyncAdapter(getApplicationContext(), true);
 			}
